add basic message handling in server

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <scope>runtime</scope>
             <version>42.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
